k8s/manifests/temporis/grafana/ingressroute-pomerium.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-pomerium
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.harvestasya.org`)
    services:
    - name: pomerium-proxy
      namespace: pomerium
      port: 443
      scheme: https
      serversTransport: pomerium-transport
